--- a/views/home.html
+++ b/views/home.html
@@ -187,15 +187,25 @@
           <a href="https://www.covermymeds.com/main/"> <img src="/img/sponsors/covermymeds.png" /> </a>
       </div>
       <div class="small-4 columns text-center">
-          <a href="http://www.interchez.com/"> <img src="/img/sponsors/InterChez.png" /> </a>
+          <a href="https://www.nationwide.com/"> <img src="/img/sponsors/NationWide.PNG" /> </a>
       </div>
   </div>
   <div class="row sponsor-row">
+    <div class="small-4 columns text-center">
+        <a href="http://www.interchez.com/"> <img src="/img/sponsors/InterChez.png" /> </a>
+    </div>
     <div class="small-4 columns text-center">
         <a href="https://www.vertical-knowledge.com/"> <img src="/img/sponsors/VerticalKnowledge.png"  style="width:50%;" /> </a>
     </div>
     <div class="small-4 columns text-center">
         <a href="https://remesh.co/"> <img src="/img/sponsors/Remesh.png"/> </a>
+    </div>
+</div>
+<div class="row sponsor-row">
+    <div class="small-4 columns text-center">
+        <a href="https://www.securable.io/"> <img src="/img/sponsors/Securable-logo-2.png" /> </a>
+    </div>
+    <div class="small-4 columns text-center">
     </div>
     <div class="small-4 columns text-center">
     </div>
@@ -207,17 +217,23 @@
     </div>
 </div>
 <div class="row sponsor-row">
-    <div class="small-6 medium-3 columns text-center">
+    <div class="small-4 columns text-center">
         <a href="http://www.tech-style-lab.org/"> <img src="/img/sponsors/tsl.png" style="width:50%;" /> </a>
     </div>
-    <div class="small-6 medium-3 columns text-center">
+    <div class="small-4 columns text-center">
         <a href="http://www.library.kent.edu/"> <img src="/img/sponsors/university-library.png" /> </a>
     </div>
-    <div class="small-6 medium-3 columns text-center end">
+    <div class="small-4 columns text-center end">
         <a href="https://www.kent.edu/cs"> <img src="/img/sponsors/cs.png" /> </a>
     </div>
-    <div class="small-6 medium-3 columns text-center end">
+</div>
+<div class="row sponsor-row">
+    <div class="small-4 columns text-center end">
         <a href="https://www.kent.edu/launchnet"> <img src="/img/sponsors/LaunchNET_KSU.png" /> </a>
+    </div>
+    <div class="small-4 columns text-center end">
+    </div>
+    <div class="small-4 columns text-center end">
     </div>
 </div>
 </div>
