Move MLH to Sponsor Section

--- a/views/home.html
+++ b/views/home.html
@@ -140,6 +140,7 @@
 </div>
 
 <div class="light-section fade" id="sponsors">
+    <a id="mlh-trust-badge" class="show-for-medium-up" style="display:block;max-width:100px;min-width:60px;position:absolute;right:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2017/events?utm_source=na-2017&utm_medium=TrustBadge&utm_campaign=na-2017&utm_content=gray" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2017/gray.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
     <div class="row">
         <div class="small-12 columns">
             <div class="row">
@@ -148,7 +149,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="small-12 columns">
+                <div class="small-10 columns">
                     <br>
                     <p>
                         Interested in sponsoring KHE 2016? Take a look at our
@@ -323,6 +324,3 @@
       <a href="http://mlh.io" target="_blank"><img src="/img/mlh-logo.svg" alt="MLH" id="mlh-logo"></a>
   </div>
 </div>
-
-
-<a id="mlh-trust-badge" class="show-for-medium-up" style="display:block;max-width:100px;min-width:60px;position:fixed;right:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2017/events?utm_source=na-2017&utm_medium=TrustBadge&utm_campaign=na-2017&utm_content=gray" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2017/gray.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
