--- a/views/home.html
+++ b/views/home.html
@@ -207,6 +207,7 @@
         <a href="https://www.securable.io/"> <img src="/img/sponsors/Securable-logo-2.png" /> </a>
     </div>
     <div class="small-4 columns text-center">
+      <a href="https://cladwell.com/"> <img src="/img/sponsors/Cladwell.png" /> </a>
     </div>
     <div class="small-4 columns text-center">
     </div>
