--- a/sass/live.scss
+++ b/sass/live.scss
@@ -30,7 +30,7 @@
 	//overflow: hidden;
 }
 
-#live {
+#live, #schedule {
 	header img {
 		height: 6.2rem;
 		width: auto;
@@ -60,8 +60,8 @@
 
 	.column, .columns {
 		padding-top: 1rem;
-	  	padding-left: 1.2rem;
-	  	padding-right: 1.2rem;
+		padding-left: 1.2rem;
+		padding-right: 1.2rem;
 	}
 
 	.small {
@@ -91,6 +91,42 @@
 	height: 30vh;
 }
 
+#schedule{ 
+	background-color: $black;
+
+	h2 {
+		text-align: center;
+	}
+
+	table {
+		padding: 0 !important;
+		background: transparent;
+		border: none;
+		border-spacing: 0;
+
+		p {
+			margin: 0;
+			line-height: 1;
+		}
+
+		h3 {
+			margin-bottom: 4px;
+		}
+
+		tr{	
+			background: transparent;
+			td{
+				padding-bottom: 50px;
+				&:first-child {
+					text-align: right;
+					border-right: 2px solid $pink;
+				}
+			}
+		}
+	}
+}
+
+
 // Medium screens
 @media only screen and (min-width: 40.063em) {
 
@@ -108,7 +144,7 @@
 		}
 	}
 
-} /* min-width 641px, medium screens */
+	} /* min-width 641px, medium screens */
 
 // Large screens
 @media only screen and (min-width: 64.063em) {
@@ -125,7 +161,7 @@
 		}
 	}
 
-} /* min-width 1025px, large screens */
+	} /* min-width 1025px, large screens */
 
 // XLarge screens
 @media only screen and (min-width: 90.063em) { } /* min-width 1441px, xlarge screens */
