Adds smooth scroll for contact and minor changes to live site

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -219,7 +219,7 @@ h1, h2, h3, h4, h5 {
 }
 
 //Xlarge screens
-@media only screen and (min-width: 90.063em) {
+@media only screen and (min-width: 1300px) {
 	#waves{ width:100vw; height: 14.1vw;}
 	#headphones, #boombox { display: block;}
 }
