--- a/views/home.html
+++ b/views/home.html
@@ -94,6 +94,13 @@
 </div>
 
 
+
+<div class="schedule-section">
+  <a class="center-link small-12 columns" href="schedule">
+    <div class="btn">Schedule</div>
+  </a>
+</div>
+
 <div class="info-section fade">
   <boombox></boombox>
   <headphones></headphones>
@@ -139,9 +146,7 @@
   </div>
 </div>
 
-<!-- <div class="schedule-section">
-  <h1>Schedule</h1>
-</div> -->
+
 
 <div class="light-section fade" id="sponsors">
   <a id="mlh-trust-badge" class="show-for-medium-up" style="display:block;max-width:100px;min-width:60px;position:absolute;right:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2017/events?utm_source=na-2017&utm_medium=TrustBadge&utm_campaign=na-2017&utm_content=gray" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2017/gray.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
