dotTech and Mobile Defense

--- a/views/home.html
+++ b/views/home.html
@@ -202,21 +202,31 @@
         </div>
         <div class="row sponsor-row">
           <div class="small-4 columns text-center">
+            <a href="https://www.mobiledefense.com/"> <img src="/img/sponsors/Mobile Defense an AIZ co stacked black.png" /> </a>
+          </div>
+          <div class="small-4 columns text-center">
             <a href="http://www.interchez.com/"> <img src="/img/sponsors/InterChez.png" /> </a>
           </div>
           <div class="small-4 columns text-center">
             <a href="https://www.vertical-knowledge.com/"> <img src="/img/sponsors/VerticalKnowledge.png"  style="width:50%;" /> </a>
           </div>
-          <div class="small-4 columns text-center">
-            <a href="https://remesh.co/"> <img src="/img/sponsors/Remesh.png"/> </a>
-          </div>
         </div>
         <div class="row sponsor-row">
+           <div class="small-4 columns text-center">
+            <a href="https://remesh.co/"> <img src="/img/sponsors/Remesh.png"/> </a>
+          </div>
           <div class="small-4 columns text-center">
             <a href="https://www.securable.io/"> <img src="/img/sponsors/Securable-logo-2.png" /> </a>
           </div>
           <div class="small-4 columns text-center">
             <a href="https://cladwell.com/"> <img src="/img/sponsors/Cladwell.png" /> </a>
+          </div>
+        </div>
+        <div class="row sponsor-row">
+           <div class="small-4 columns text-center">
+            <a href="https://dottech.org/"> <img src="/img/sponsors/dotTECH.png" style="width:65%;"  /> </a>
+          </div>
+          <div class="small-4 columns text-center">
           </div>
           <div class="small-4 columns text-center">
           </div>
