--- a/views/home.html
+++ b/views/home.html
@@ -224,7 +224,7 @@
         </div>
         <div class="row sponsor-row">
            <div class="small-4 columns text-center">
-            <a href="https://dottech.org/"> <img src="/img/sponsors/dotTECH.png" style="width:65%;"  /> </a>
+            <a href="http://get.tech/"> <img src="/img/sponsors/dotTECH.png" style="width:65%;"  /> </a>
           </div>
           <div class="small-4 columns text-center">
           </div>
