Replaced Securable Logo

--- a/views/home.html
+++ b/views/home.html
@@ -216,7 +216,7 @@
             <a href="https://remesh.co/"> <img src="/img/sponsors/Remesh.png"/> </a>
           </div>
           <div class="small-4 columns text-center">
-            <a href="https://www.securable.io/"> <img src="/img/sponsors/Securable-logo-2.png" /> </a>
+            <a href="https://www.securable.io/"> <img src="/img/sponsors/dilloshirtt.svg" /> </a>
           </div>
           <div class="small-4 columns text-center">
             <a href="https://cladwell.com/"> <img src="/img/sponsors/Cladwell.png" /> </a>
