Change schedule to live

--- a/views/home.html
+++ b/views/home.html
@@ -96,8 +96,8 @@
 
 
 <div class="schedule-section">
-  <a class="center-link small-12 columns" href="schedule">
-    <div class="btn">Schedule</div>
+  <a class="center-link small-12 columns" href="live">
+    <div class="btn">Live</div>
   </a>
 </div>
 
